--- a/Assingments/Final Project/Contacts.html
+++ b/Assingments/Final Project/Contacts.html
@@ -1,12 +1,55 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Contact me</title>
+    <title>Contact</title>
     <link rel="icon" type="image/x-icon" href="icon.png">
 </head>
+<header>
+    <h1>Contact</h1>
+
+</header>
+<hr>
+<nav>
+    <ul>
+        <li> <a href="My Portfolio.html">Home</a> </li>
+        <li> <a href="My projects.html">Projects</a> </li>
+    </ul>
+</nav>
+<hr>
+
 <body>
-    
+
+
+    <form action>
+        <h2>Send me a message</h2>
+        <label for="Email">Write your email</label>
+        <input id="Email" type="email" placeholder="Example@gmail.com">
+        <br>
+        <label for="Password">Write your password</label>
+        <input id="password" type="password">
+        <br>
+        <label for="password">Confirm your password</label>
+        <input id="password" type="password">
+        <br>
+        <br>
+        <label for="message">Message</label>
+        <br>
+        <textarea name id cols="30" rows="10"></textarea>
+        <br>
+        <input type="submit" value="submit">
+        <br>
+        <a href="https://www.instagram.com/a.m.a.r.i.i.i/">Instagram</a>
+        <br>
+        <a href="https://www.facebook.com/amar.sherifi.336">FaceBook</a>
+    </form>
+    <hr>
+    <footer>
+        All rights Reserved <strong><i>Amar Sherfi </i></strong> ©
+    </footer>
+
 </body>
+
 </html>
