--- a/Assingments/Final Project/My projects.html
+++ b/Assingments/Final Project/My projects.html
@@ -1,4 +1,3 @@
-Blert Memeti
 <!DOCTYPE html>
 <html lang="en">
 
@@ -28,8 +27,8 @@ Blert Memeti
     <article>
         <h2>My Projects</h2>
         <p>Here are my projects!</p>
-        <a href="Capture.JPG">
-            <figure> <img src="Capture.JPG"> </figure>
+        <a href="Screenshot_12.png">
+            <figure> <img src="Screenshot_12.png"> </figure>
 
         </a>
         <hr>
@@ -40,6 +39,10 @@ Blert Memeti
         <a href="Captue3.PNG">
             <figure> <img src="Captue3.PNG"> </figure>
         </a>
+        <hr>
+        <footer>
+            All rights Reserved <strong><i>Amar Sherfi </i></strong> ©
+        </footer>
     </article>
 </main>
 
